WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280316
Excessive repainting when scrolling position:sticky in some configurations
https://bugs.webkit.org/show_bug.cgi?id=280316
Summary
Excessive repainting when scrolling position:sticky in some configurations
Simon Fraser (smfr)
Reported
2024-09-24 18:57:37 PDT
Scrolling on website for Poor Charlie’s Almanack is incredibly laggy in Safari, works well in Chrome. Steps To Reproduce: 1. Visit
https://www.stripe.press/poor-charlies-almanack/talk-one?progress=0.00
% 2. Scroll with trackpad Results: Website lags while scrolling, works great in Chrome
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-09-24 18:57:52 PDT
<
rdar://120280327
>
Simon Fraser (smfr)
Comment 2
2024-09-24 19:04:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34207
David
Comment 3
2024-09-28 07:18:25 PDT
I have the exact same issue with this website :
https://staging.geloso.com
(which will soon become simply
https://geloso.com
, so if you see this in the future, it might be flipped to live). The sticky panels make Safari want to explode, whereas there's no difference in performance wether they're sticky or not in Chrome or Firefox, so I'll have to deactivate them until the solution is released.
Simon Fraser (smfr)
Comment 4
2024-10-07 10:58:53 PDT
I tested, and
https://staging.geloso.com/
seems OK even without the fix; I don't see excessive repainting.
EWS
Comment 5
2024-10-07 19:50:22 PDT
Committed
284802@main
(6a6822efc75a): <
https://commits.webkit.org/284802@main
> Reviewed commits have been landed. Closing PR #34207 and removing active labels.
David
Comment 6
2024-10-17 16:53:00 PDT
Mm might be another issue, but there's definitely a huge difference. For example, testing in Safari Tech Preview:
https://youtu.be/qB1TwNaCjLM
The framerate visibly drops, not only that but the rendering seems to stutter and hit a low-enough point that the GPU needs to "catch up" and repaint multiple frames at once. Removing the position sticky helps a lot. The framerate now doesn't seem to drop below 25 (which is better than the lowest around 10) but the stuttering is now also gone, probably because the GPU isn't overloaded and does't need to catch up. Granted it's a pretty complicated website with lots of animations and smooth scrolling, but it runs perfectly in both Chrome and Firefox, wether position sticky is there or not.
EWS
Comment 7
2024-11-11 11:52:35 PST
Committed
283286.471@safari-7620-branch
(374b5e1de0e5): <
https://commits.webkit.org/283286.471@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2234 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug