Excessive repainting when scrolling position:sticky in some configurations https://bugs.webkit.org/show_bug.cgi?id=280316 rdar://120280327

Reviewed by Alan Baradlay.

https://www.stripe.press/poor-charlies-almanack/talk-one has a tiled `position:sticky` element
which repaints on every scroll. This happens when `RenderLayer::recursiveUpdateLayerPositionsAfterScroll()`
and `RenderLayer::recursiveUpdateLayerPositions()` have different criteria for the `clearRepaintRects()`
condition; the former was testing `!isVisuallyNonEmpty()` and the latter just `m_hasVisibleContent`.

The fix is to have both code paths use a new `isVisibilityHiddenOrOpacityZero()` which just does the
simple check for the visibility and opacity properties. This shouldn't cause much new repainting, because
`recursiveUpdateLayerPositionsAfterScroll()` was doing the stricter check, and we'll almost always do layout
after scroll.

The test requires async scrolling (programmatic scrolling triggers layouts on every scroll as the layout viewport changes).

* LayoutTests/TestExpectations:
* LayoutTests/compositing/repaint/sticky-repaint-on-scroll-expected.txt: Added.
* LayoutTests/compositing/repaint/sticky-repaint-on-scroll.html: Added.
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):

Canonical link: https://commits.webkit.org/284802@main